force-app/main/default/objects/Apttus_Billing__ForecastedLineItemOptions__c/Apttus_Billing__ForecastedLineItemOptions__c.object-meta.xml
<CustomObject>
    <description>Options for each Line Item of a Proposal to be forecasted by Billing.</description>
    <label>Forecasted Line Item Options</label>
    <nameField>
        <displayFormat>FLIO-{00000000}</displayFormat>
        <label>Options Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forecasted Line Item Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>