force-app/main/default/objects/Apttus_Billing__ForecastedLineItemOptions__c/fields/Apttus_Billing__AverageContractTerms__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__AverageContractTerms__c</fullName>
    <description>For an evergreen Line Item this is the number of Billing Schedules to forecast.</description>
    <inlineHelpText>For an evergreen Line Item this is the number of Billing Schedules to forecast.</inlineHelpText>
    <label>Average Life</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>