force-app/main/default/objects/Apttus_Billing__ForecastedLineItemOptions__c/fields/Apttus_Billing__ConfigurationId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__ConfigurationId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Id of the corresponding Product Configuration.</description>
    <inlineHelpText>Id of the corresponding Product Configuration.</inlineHelpText>
    <label>Configuration</label>
    <referenceTo>Apttus_Config2__ProductConfiguration__c</referenceTo>
    <relationshipLabel>Forecasted Line Item Options</relationshipLabel>
    <relationshipName>ForecastedLineItemOptions</relationshipName>
    <type>Lookup</type>
</CustomField>