force-app/main/default/objects/Apttus_Billing__ForecastedLineItemOptions__c/fields/Apttus_Billing__EstimatedUsageQuantity__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__EstimatedUsageQuantity__c</fullName>
    <description>The Quantity to apply when calculating usage for the various Billing Periods.</description>
    <inlineHelpText>The Quantity to apply when calculating usage for the various Billing Periods.</inlineHelpText>
    <label>Estimated Usage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>