force-app/main/default/objects/Apttus_Billing__ForecastedLineItemOptions__c/fields/Apttus_Billing__ForecastedBillingOptionsId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__ForecastedBillingOptionsId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Id of the corresponding Forecasted Billing Options object.</description>
    <inlineHelpText>Id of the corresponding Forecasted Billing Options object.</inlineHelpText>
    <label>Forecasted Billing Options</label>
    <referenceTo>Apttus_Billing__ForecastedBillingOptions__c</referenceTo>
    <relationshipLabel>Forecasted Line Item Options</relationshipLabel>
    <relationshipName>ForecastedLineItemOptions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>