force-app/main/default/objects/Apttus_Billing__ForecastedLineItemOptions__c/fields/Apttus_Billing__LineItem__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__LineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Id of the corresponding Line Item.</description>
    <inlineHelpText>Id of the corresponding Line Item.</inlineHelpText>
    <label>Line Item</label>
    <referenceTo>Apttus_Config2__LineItem__c</referenceTo>
    <relationshipLabel>Forecasted Line Item Options</relationshipLabel>
    <relationshipName>ForecastedLineItemOptions</relationshipName>
    <type>Lookup</type>
</CustomField>