force-app/main/default/objects/Apttus_Billing__ForecastedLineItemOptions__c/fields/Apttus_Billing__ProposalId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__ProposalId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Id of the corresponding Quote/Proposal.</description>
    <inlineHelpText>Id of the corresponding Quote/Proposal.</inlineHelpText>
    <label>Quote/Proposal</label>
    <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
    <relationshipLabel>Forecasted Line Item Options</relationshipLabel>
    <relationshipName>ForecastedLineItemOptions</relationshipName>
    <type>Lookup</type>
</CustomField>