force-app/main/default/objects/Apttus_Billing__ForecastedLineItemOptions__c/fields/Apttus_Billing__UpliftAfterNumBillingPeriods__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__UpliftAfterNumBillingPeriods__c</fullName>
    <description>The number of Billing Periods that must to elapse before uplifting (increasing) the forecasted rate.</description>
    <inlineHelpText>The number of Billing Periods that must to elapse before uplifting (increasing) the forecasted rate.</inlineHelpText>
    <label>Uplift After</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>