force-app/main/default/objects/Apttus_Billing__ForecastedLineItemOptions__c/fields/Apttus_Billing__UpliftPercentage__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__UpliftPercentage__c</fullName>
    <description>The percentage to apply when uplifting (increasing) the amount per billing period of an Evergreen Asset.</description>
    <inlineHelpText>The percentage to apply when uplifting (increasing) the amount per billing period of an Evergreen Asset. Leave this blank if there is no uplift.</inlineHelpText>
    <label>Uplift %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>